fix: font size y overflow hidden de cosas que se salen del container

--- a/src/components/date-timer-countdown/date-timer-countdown.scss
+++ b/src/components/date-timer-countdown/date-timer-countdown.scss
@@ -18,5 +18,6 @@
         align-items: center;
         color: white;
         text-shadow: 1px 1px 2px black;
+        font-size: 15px;
     }
 }
