--- a/src/components/portrait/portrait.scss
+++ b/src/components/portrait/portrait.scss
@@ -9,7 +9,7 @@
     &__container {
         color: white;
         min-height: 100vh;
-        background-image: url('./img/portrait.jpg');
+        background-image: url('../img/portrait.jpg');
         background-size: 100vh;
         background-position: center;
         background-repeat: no-repeat;
