--- a/src/components/salon-map/salon-map.scss
+++ b/src/components/salon-map/salon-map.scss
@@ -42,14 +42,14 @@
     }
 
     &__salon-map {
-        background-image: url('./img/places/salon-map.png');
+        background-image: url('../img/places/salon-map.png');
         height: 300px;
         background-size: 100% 100%;
         background-repeat: no-repeat;
     }
 
     &__salon-img {
-        background-image: url('./img/places/salon-img.png');
+        background-image: url('../img/places/salon-img.png');
         height: 300px;
         background-size: 100% 100%;
         background-repeat: no-repeat;
