--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@ $mobileMaxValue: 990px;
 
 * {
     box-sizing: border-box;
+    user-select: none;
 }
 
 .text-center {
@@ -10,6 +11,7 @@ $mobileMaxValue: 990px;
 
 html {
     font-size: 62.5%;
+    width: 100%;
 }
 
 body {
@@ -17,8 +19,8 @@ body {
 }
 
 .container {
-    max-width: 120rem;
-    min-width: 30rem;
+    max-width: 990px;
     margin: 0 auto;
     width: 100%;
+    overflow: hidden;
 }
